tenzir/integration/data/reference/feather/test_additional_write_options/step_04.ref
error: Invalid: Unrecognized compression type: wrongname
 --> <input>:1:170
  |
1 | from /Users/balavinaithirthan/tenzir/tenzir/integration/data/inputs/zeek/conn.log.gz read zeek-tsv | batch 256 | write feather --compression-level -1 --compression-type wrongname | read feather
  |                                                                                                                                                                          ^^^^^^^^^ 
  |
  = note: failed to parse compression type
  = note: must be `lz4` or `zstd`
  = note: failed to initialize printer